# course_work_3

./: README.md  main.py  pyproject.toml
tests/: operations_test.json  test_class_operation.py  test_utils.py
utils_classes/: class_operation.py  utils.py
