[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["EAKapitonov <Kapitonov281087@mail.tu>"]
readme = "README.md"
packages = [{include = "course_work_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
requests = "^2.28.2"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
